--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="author" content="John Doe">
 <meta name="viewport" content="width=device-width, initial-scale=0.2">
 <script type="text/javascript">
-  alert("Page Created By Kaushik Karthikeyan K R")
+  alert("Page Created By Kaushik Karthikeyan K")
   console.log('a message in console')
   </script>
 <style>
